install-dump/2025-09-06-202911/iptables/iptables-save.rules
# Generated by iptables-save v1.8.7 on Sat Sep  6 20:29:16 2025
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
COMMIT
# Completed on Sat Sep  6 20:29:16 2025
# Generated by iptables-save v1.8.7 on Sat Sep  6 20:29:16 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:FLANNEL-FWD - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -m comment --comment "flanneld forward" -j FLANNEL-FWD
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A FLANNEL-FWD -s 10.244.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
-A FLANNEL-FWD -d 10.244.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct --nfacct-name  ct_state_invalid_dropped_pkts -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Sep  6 20:29:16 2025
# Generated by iptables-save v1.8.7 on Sat Sep  6 20:29:16 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:CNI-DN-a6b434fbbcd8914a37e3e - [0:0]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
:DOCKER - [0:0]
:FLANNEL-POSTRTG - [0:0]
:KUBE-EXT-CG5I4G2RS3ZVWGLK - [0:0]
:KUBE-EXT-EDNDUDH2C75GIR6O - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-34PXPAKRT4NRBZRV - [0:0]
:KUBE-SEP-5H4PQHEH3QCKBT3T - [0:0]
:KUBE-SEP-6E7XQMQ4RAYOWTTM - [0:0]
:KUBE-SEP-6O4SRZAZSEIY5VW4 - [0:0]
:KUBE-SEP-7JX74ZP2Z2GZVOVD - [0:0]
:KUBE-SEP-7YVXESARKG6GVZIE - [0:0]
:KUBE-SEP-CEWR77HQLZDHWWAJ - [0:0]
:KUBE-SEP-DJHE3STL5LOBGI2W - [0:0]
:KUBE-SEP-GM3ZYPDQZKKHXP6D - [0:0]
:KUBE-SEP-GZ5HGRHPX6LAWJ6Y - [0:0]
:KUBE-SEP-ILGU4HGY5OWPMYYA - [0:0]
:KUBE-SEP-IRI4XBY25QLSTQE3 - [0:0]
:KUBE-SEP-JHPASAIUXAQFI6BH - [0:0]
:KUBE-SEP-LBMQNJ35ID4UIQ2A - [0:0]
:KUBE-SEP-OMNK6WQ2GLQGT7M4 - [0:0]
:KUBE-SEP-OWBRLJ2Z6GNPLUHB - [0:0]
:KUBE-SEP-PMS3PVW3F6VN7ZCB - [0:0]
:KUBE-SEP-PXV7UU7LGNRO3KLK - [0:0]
:KUBE-SEP-QDS2U5WUVX3O3ORN - [0:0]
:KUBE-SEP-QNXYQK6BWTI4KQRL - [0:0]
:KUBE-SEP-QVQW3IY27NNM4L6G - [0:0]
:KUBE-SEP-RG3WJDDR5PK3WI3W - [0:0]
:KUBE-SEP-S7MPVVC7MGYVFSF3 - [0:0]
:KUBE-SEP-UC7QSZRPQXJIG46N - [0:0]
:KUBE-SEP-UIBATC5QF7SPCCN4 - [0:0]
:KUBE-SEP-ULJJKFSC4YGIFRKX - [0:0]
:KUBE-SEP-Y6UDSRCX4RWXMEJ3 - [0:0]
:KUBE-SEP-YBXI46UGV3J5W2DY - [0:0]
:KUBE-SEP-ZGGEVCOHL3SZXMKT - [0:0]
:KUBE-SEP-ZP3FB6NMPNCO4VBJ - [0:0]
:KUBE-SEP-ZRXA7MHB2JTSMETU - [0:0]
:KUBE-SEP-ZXMNUKOKXUTL2MK2 - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-23PZZN2UKY3TJBX2 - [0:0]
:KUBE-SVC-5P7QYFVHGOC5IOJ6 - [0:0]
:KUBE-SVC-CG5I4G2RS3ZVWGLK - [0:0]
:KUBE-SVC-DZOWW63ZZHJ73RZG - [0:0]
:KUBE-SVC-E3IBCFULSWKQCT47 - [0:0]
:KUBE-SVC-EDNDUDH2C75GIR6O - [0:0]
:KUBE-SVC-ELE3EOWUPGZLKWXO - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-KUJ6ECKL6H5JAXUK - [0:0]
:KUBE-SVC-MZHGT6CDAGMW2KTF - [0:0]
:KUBE-SVC-NGSMBSSFRDULITT4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-NQL64TY2T3FWFXFQ - [0:0]
:KUBE-SVC-OKOAGQILQ2QU2JM4 - [0:0]
:KUBE-SVC-OMSERJGOAAISQMFW - [0:0]
:KUBE-SVC-PA4WR4WRQDCN7SSQ - [0:0]
:KUBE-SVC-S4EMHPZ44GDBMEWI - [0:0]
:KUBE-SVC-SLR7RBONOEYPJ4X2 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-TD5WHLPT5YWZCX2A - [0:0]
:KUBE-SVC-TYVUZ72JN6SHFAXC - [0:0]
:KUBE-SVC-U7SXUNEARU4YPLE2 - [0:0]
:KUBE-SVC-VCJD5DMHTZGOKGNJ - [0:0]
:KUBE-SVC-Y464ZVWMEHSZBAXB - [0:0]
:KUBE-SVC-ZUD4L6KQKCHD52W4 - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -d 91.98.16.184/32 -i src -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 30080
-A PREROUTING -d 91.98.16.184/32 -i src -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 30443
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -m comment --comment "flanneld masq" -j FLANNEL-POSTRTG
-A POSTROUTING -s 10.244.0.0/16 -m addrtype ! --dst-type LOCAL -j MASQUERADE
-A CNI-DN-a6b434fbbcd8914a37e3e -s 10.244.0.0/24 -p tcp -m tcp --dport 80 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a6b434fbbcd8914a37e3e -s 127.0.0.1/32 -p tcp -m tcp --dport 80 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a6b434fbbcd8914a37e3e -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.244.0.202:80
-A CNI-DN-a6b434fbbcd8914a37e3e -s 10.244.0.0/24 -p tcp -m tcp --dport 443 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a6b434fbbcd8914a37e3e -s 127.0.0.1/32 -p tcp -m tcp --dport 443 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a6b434fbbcd8914a37e3e -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.244.0.202:443
-A CNI-HOSTPORT-DNAT -p tcp -m comment --comment "dnat name: \"cbr0\" id: \"e0032cfdf57ebe4de62137efbd2b015208ae6374fdb54d48b6e9884cf44cf939\"" -m multiport --dports 80,443 -j CNI-DN-a6b434fbbcd8914a37e3e
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
-A DOCKER -i docker0 -j RETURN
-A FLANNEL-POSTRTG -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.244.0.0/24 -d 10.244.0.0/16 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.244.0.0/16 -d 10.244.0.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG ! -s 10.244.0.0/16 -d 10.244.0.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.244.0.0/16 ! -d 224.0.0.0/4 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
-A FLANNEL-POSTRTG ! -s 10.244.0.0/16 -d 10.244.0.0/16 -m comment --comment "flanneld masq" -j MASQUERADE --random-fully
-A KUBE-EXT-CG5I4G2RS3ZVWGLK -m comment --comment "masquerade traffic for ingress-nginx/ingress-nginx-controller:http external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-CG5I4G2RS3ZVWGLK -j KUBE-SVC-CG5I4G2RS3ZVWGLK
-A KUBE-EXT-EDNDUDH2C75GIR6O -m comment --comment "masquerade traffic for ingress-nginx/ingress-nginx-controller:https external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-EDNDUDH2C75GIR6O -j KUBE-SVC-EDNDUDH2C75GIR6O
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-CG5I4G2RS3ZVWGLK
-A KUBE-NODEPORTS -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -j KUBE-EXT-CG5I4G2RS3ZVWGLK
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -m nfacct --nfacct-name  localhost_nps_accepted_pkts -j KUBE-EXT-EDNDUDH2C75GIR6O
-A KUBE-NODEPORTS -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -j KUBE-EXT-EDNDUDH2C75GIR6O
-A KUBE-POSTROUTING -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-34PXPAKRT4NRBZRV -s 10.244.0.202/32 -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-34PXPAKRT4NRBZRV -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -m tcp -j DNAT --to-destination 10.244.0.202:80
-A KUBE-SEP-5H4PQHEH3QCKBT3T -s 10.244.0.19/32 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-5H4PQHEH3QCKBT3T -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook" -m tcp -j DNAT --to-destination 10.244.0.19:9501
-A KUBE-SEP-6E7XQMQ4RAYOWTTM -s 10.244.0.3/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-6E7XQMQ4RAYOWTTM -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.0.3:53
-A KUBE-SEP-6O4SRZAZSEIY5VW4 -s 91.98.16.184/32 -m comment --comment "observability/kube-prometheus-stack-prometheus-node-exporter:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-6O4SRZAZSEIY5VW4 -p tcp -m comment --comment "observability/kube-prometheus-stack-prometheus-node-exporter:http-metrics" -m tcp -j DNAT --to-destination 91.98.16.184:9100
-A KUBE-SEP-7JX74ZP2Z2GZVOVD -s 10.244.0.14/32 -m comment --comment "logging/loki:http-metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-7JX74ZP2Z2GZVOVD -p tcp -m comment --comment "logging/loki:http-metrics" -m tcp -j DNAT --to-destination 10.244.0.14:3100
-A KUBE-SEP-7YVXESARKG6GVZIE -s 10.244.0.49/32 -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor" -j KUBE-MARK-MASQ
-A KUBE-SEP-7YVXESARKG6GVZIE -p tcp -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor" -m tcp -j DNAT --to-destination 10.244.0.49:9402
-A KUBE-SEP-CEWR77HQLZDHWWAJ -s 10.244.0.9/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-CEWR77HQLZDHWWAJ -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.0.9:9153
-A KUBE-SEP-DJHE3STL5LOBGI2W -s 10.244.0.4/32 -m comment --comment "flux-system/notification-controller:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-DJHE3STL5LOBGI2W -p tcp -m comment --comment "flux-system/notification-controller:http" -m tcp -j DNAT --to-destination 10.244.0.4:9090
-A KUBE-SEP-GM3ZYPDQZKKHXP6D -s 10.244.0.12/32 -m comment --comment "whoami/whoami" -j KUBE-MARK-MASQ
-A KUBE-SEP-GM3ZYPDQZKKHXP6D -p tcp -m comment --comment "whoami/whoami" -m tcp -j DNAT --to-destination 10.244.0.12:8080
-A KUBE-SEP-GZ5HGRHPX6LAWJ6Y -s 10.244.0.42/32 -m comment --comment "observability/kube-prometheus-stack-prometheus:reloader-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-GZ5HGRHPX6LAWJ6Y -p tcp -m comment --comment "observability/kube-prometheus-stack-prometheus:reloader-web" -m tcp -j DNAT --to-destination 10.244.0.42:8080
-A KUBE-SEP-ILGU4HGY5OWPMYYA -s 10.244.0.25/32 -m comment --comment "observability/kube-prometheus-stack-operator:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-ILGU4HGY5OWPMYYA -p tcp -m comment --comment "observability/kube-prometheus-stack-operator:https" -m tcp -j DNAT --to-destination 10.244.0.25:10250
-A KUBE-SEP-IRI4XBY25QLSTQE3 -s 10.244.0.42/32 -m comment --comment "observability/kube-prometheus-stack-prometheus:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-IRI4XBY25QLSTQE3 -p tcp -m comment --comment "observability/kube-prometheus-stack-prometheus:http-web" -m tcp -j DNAT --to-destination 10.244.0.42:9090
-A KUBE-SEP-JHPASAIUXAQFI6BH -s 10.244.0.4/32 -m comment --comment "flux-system/webhook-receiver:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-JHPASAIUXAQFI6BH -p tcp -m comment --comment "flux-system/webhook-receiver:http" -m tcp -j DNAT --to-destination 10.244.0.4:9292
-A KUBE-SEP-LBMQNJ35ID4UIQ2A -s 10.244.0.9/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-LBMQNJ35ID4UIQ2A -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.0.9:53
-A KUBE-SEP-OMNK6WQ2GLQGT7M4 -s 10.244.0.19/32 -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -j KUBE-MARK-MASQ
-A KUBE-SEP-OMNK6WQ2GLQGT7M4 -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend" -m tcp -j DNAT --to-destination 10.244.0.19:9503
-A KUBE-SEP-OWBRLJ2Z6GNPLUHB -s 10.244.0.19/32 -m comment --comment "longhorn-system/longhorn-backend:manager" -j KUBE-MARK-MASQ
-A KUBE-SEP-OWBRLJ2Z6GNPLUHB -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager" -m tcp -j DNAT --to-destination 10.244.0.19:9500
-A KUBE-SEP-PMS3PVW3F6VN7ZCB -s 10.244.0.26/32 -m comment --comment "whoami/whoami" -j KUBE-MARK-MASQ
-A KUBE-SEP-PMS3PVW3F6VN7ZCB -p tcp -m comment --comment "whoami/whoami" -m tcp -j DNAT --to-destination 10.244.0.26:8080
-A KUBE-SEP-PXV7UU7LGNRO3KLK -s 10.244.0.36/32 -m comment --comment "observability/kube-prometheus-stack-grafana:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-PXV7UU7LGNRO3KLK -p tcp -m comment --comment "observability/kube-prometheus-stack-grafana:http-web" -m tcp -j DNAT --to-destination 10.244.0.36:3000
-A KUBE-SEP-QDS2U5WUVX3O3ORN -s 10.244.0.164/32 -m comment --comment "flux-system/source-controller:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-QDS2U5WUVX3O3ORN -p tcp -m comment --comment "flux-system/source-controller:http" -m tcp -j DNAT --to-destination 10.244.0.164:9090
-A KUBE-SEP-QNXYQK6BWTI4KQRL -s 10.244.0.47/32 -m comment --comment "cert-manager/cert-manager-webhook:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-QNXYQK6BWTI4KQRL -p tcp -m comment --comment "cert-manager/cert-manager-webhook:https" -m tcp -j DNAT --to-destination 10.244.0.47:10250
-A KUBE-SEP-QVQW3IY27NNM4L6G -s 10.244.0.5/32 -m comment --comment "whoami/whoami" -j KUBE-MARK-MASQ
-A KUBE-SEP-QVQW3IY27NNM4L6G -p tcp -m comment --comment "whoami/whoami" -m tcp -j DNAT --to-destination 10.244.0.5:8080
-A KUBE-SEP-RG3WJDDR5PK3WI3W -s 10.244.0.24/32 -m comment --comment "observability/kube-prometheus-stack-alertmanager:reloader-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-RG3WJDDR5PK3WI3W -p tcp -m comment --comment "observability/kube-prometheus-stack-alertmanager:reloader-web" -m tcp -j DNAT --to-destination 10.244.0.24:8080
-A KUBE-SEP-S7MPVVC7MGYVFSF3 -s 10.244.0.9/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-S7MPVVC7MGYVFSF3 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.0.9:53
-A KUBE-SEP-UC7QSZRPQXJIG46N -s 10.244.0.17/32 -m comment --comment "longhorn-system/longhorn-frontend:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-UC7QSZRPQXJIG46N -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http" -m tcp -j DNAT --to-destination 10.244.0.17:8000
-A KUBE-SEP-UIBATC5QF7SPCCN4 -s 10.244.0.40/32 -m comment --comment "observability/kube-prometheus-stack-kube-state-metrics:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-UIBATC5QF7SPCCN4 -p tcp -m comment --comment "observability/kube-prometheus-stack-kube-state-metrics:http" -m tcp -j DNAT --to-destination 10.244.0.40:8080
-A KUBE-SEP-ULJJKFSC4YGIFRKX -s 91.98.16.184/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-ULJJKFSC4YGIFRKX -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 91.98.16.184:6443
-A KUBE-SEP-Y6UDSRCX4RWXMEJ3 -s 10.244.0.202/32 -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-Y6UDSRCX4RWXMEJ3 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -m tcp -j DNAT --to-destination 10.244.0.202:443
-A KUBE-SEP-YBXI46UGV3J5W2DY -s 10.244.0.24/32 -m comment --comment "observability/kube-prometheus-stack-alertmanager:http-web" -j KUBE-MARK-MASQ
-A KUBE-SEP-YBXI46UGV3J5W2DY -p tcp -m comment --comment "observability/kube-prometheus-stack-alertmanager:http-web" -m tcp -j DNAT --to-destination 10.244.0.24:9093
-A KUBE-SEP-ZGGEVCOHL3SZXMKT -s 10.244.0.19/32 -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZGGEVCOHL3SZXMKT -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook" -m tcp -j DNAT --to-destination 10.244.0.19:9502
-A KUBE-SEP-ZP3FB6NMPNCO4VBJ -s 10.244.0.3/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZP3FB6NMPNCO4VBJ -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.244.0.3:9153
-A KUBE-SEP-ZRXA7MHB2JTSMETU -s 10.244.0.20/32 -m comment --comment "longhorn-system/longhorn-frontend:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZRXA7MHB2JTSMETU -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http" -m tcp -j DNAT --to-destination 10.244.0.20:8000
-A KUBE-SEP-ZXMNUKOKXUTL2MK2 -s 10.244.0.3/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZXMNUKOKXUTL2MK2 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.0.3:53
-A KUBE-SERVICES -d 10.102.83.148/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-prometheus-node-exporter:http-metrics cluster IP" -j KUBE-SVC-5P7QYFVHGOC5IOJ6
-A KUBE-SERVICES -d 10.105.203.251/32 -p tcp -m comment --comment "flux-system/notification-controller:http cluster IP" -j KUBE-SVC-DZOWW63ZZHJ73RZG
-A KUBE-SERVICES -d 10.110.2.54/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-prometheus:http-web cluster IP" -j KUBE-SVC-OKOAGQILQ2QU2JM4
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -d 10.104.168.151/32 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http cluster IP" -j KUBE-SVC-CG5I4G2RS3ZVWGLK
-A KUBE-SERVICES -d 10.100.188.53/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-operator:https cluster IP" -j KUBE-SVC-MZHGT6CDAGMW2KTF
-A KUBE-SERVICES -d 10.97.225.223/32 -p tcp -m comment --comment "longhorn-system/longhorn-frontend:http cluster IP" -j KUBE-SVC-ELE3EOWUPGZLKWXO
-A KUBE-SERVICES -d 10.99.113.119/32 -p tcp -m comment --comment "logging/loki:http-metrics cluster IP" -j KUBE-SVC-TD5WHLPT5YWZCX2A
-A KUBE-SERVICES -d 10.111.109.215/32 -p tcp -m comment --comment "flux-system/source-controller:http cluster IP" -j KUBE-SVC-U7SXUNEARU4YPLE2
-A KUBE-SERVICES -d 10.108.169.136/32 -p tcp -m comment --comment "flux-system/webhook-receiver:http cluster IP" -j KUBE-SVC-VCJD5DMHTZGOKGNJ
-A KUBE-SERVICES -d 10.104.168.151/32 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https cluster IP" -j KUBE-SVC-EDNDUDH2C75GIR6O
-A KUBE-SERVICES -d 10.109.145.15/32 -p tcp -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor cluster IP" -j KUBE-SVC-E3IBCFULSWKQCT47
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.101.32.134/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-grafana:http-web cluster IP" -j KUBE-SVC-OMSERJGOAAISQMFW
-A KUBE-SERVICES -d 10.102.87.65/32 -p tcp -m comment --comment "cert-manager/cert-manager-webhook:https cluster IP" -j KUBE-SVC-ZUD4L6KQKCHD52W4
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.106.108.181/32 -p tcp -m comment --comment "whoami/whoami cluster IP" -j KUBE-SVC-23PZZN2UKY3TJBX2
-A KUBE-SERVICES -d 10.109.213.103/32 -p tcp -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook cluster IP" -j KUBE-SVC-S4EMHPZ44GDBMEWI
-A KUBE-SERVICES -d 10.100.75.249/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-alertmanager:reloader-web cluster IP" -j KUBE-SVC-Y464ZVWMEHSZBAXB
-A KUBE-SERVICES -d 10.100.75.249/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-alertmanager:http-web cluster IP" -j KUBE-SVC-PA4WR4WRQDCN7SSQ
-A KUBE-SERVICES -d 10.110.78.92/32 -p tcp -m comment --comment "longhorn-system/longhorn-backend:manager cluster IP" -j KUBE-SVC-NQL64TY2T3FWFXFQ
-A KUBE-SERVICES -d 10.105.145.149/32 -p tcp -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend cluster IP" -j KUBE-SVC-TYVUZ72JN6SHFAXC
-A KUBE-SERVICES -d 10.110.2.54/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-prometheus:reloader-web cluster IP" -j KUBE-SVC-SLR7RBONOEYPJ4X2
-A KUBE-SERVICES -d 10.111.103.173/32 -p tcp -m comment --comment "observability/kube-prometheus-stack-kube-state-metrics:http cluster IP" -j KUBE-SVC-KUJ6ECKL6H5JAXUK
-A KUBE-SERVICES -d 10.108.197.66/32 -p tcp -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook cluster IP" -j KUBE-SVC-NGSMBSSFRDULITT4
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-23PZZN2UKY3TJBX2 -m comment --comment "whoami/whoami -> 10.244.0.12:8080" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-GM3ZYPDQZKKHXP6D
-A KUBE-SVC-23PZZN2UKY3TJBX2 -m comment --comment "whoami/whoami -> 10.244.0.26:8080" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-PMS3PVW3F6VN7ZCB
-A KUBE-SVC-23PZZN2UKY3TJBX2 -m comment --comment "whoami/whoami -> 10.244.0.5:8080" -j KUBE-SEP-QVQW3IY27NNM4L6G
-A KUBE-SVC-5P7QYFVHGOC5IOJ6 -m comment --comment "observability/kube-prometheus-stack-prometheus-node-exporter:http-metrics -> 91.98.16.184:9100" -j KUBE-SEP-6O4SRZAZSEIY5VW4
-A KUBE-SVC-CG5I4G2RS3ZVWGLK -m comment --comment "ingress-nginx/ingress-nginx-controller:http -> 10.244.0.202:80" -j KUBE-SEP-34PXPAKRT4NRBZRV
-A KUBE-SVC-DZOWW63ZZHJ73RZG -m comment --comment "flux-system/notification-controller:http -> 10.244.0.4:9090" -j KUBE-SEP-DJHE3STL5LOBGI2W
-A KUBE-SVC-E3IBCFULSWKQCT47 -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor -> 10.244.0.49:9402" -j KUBE-SEP-7YVXESARKG6GVZIE
-A KUBE-SVC-EDNDUDH2C75GIR6O -m comment --comment "ingress-nginx/ingress-nginx-controller:https -> 10.244.0.202:443" -j KUBE-SEP-Y6UDSRCX4RWXMEJ3
-A KUBE-SVC-ELE3EOWUPGZLKWXO -m comment --comment "longhorn-system/longhorn-frontend:http -> 10.244.0.17:8000" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-UC7QSZRPQXJIG46N
-A KUBE-SVC-ELE3EOWUPGZLKWXO -m comment --comment "longhorn-system/longhorn-frontend:http -> 10.244.0.20:8000" -j KUBE-SEP-ZRXA7MHB2JTSMETU
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.244.0.3:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZXMNUKOKXUTL2MK2
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.244.0.9:53" -j KUBE-SEP-S7MPVVC7MGYVFSF3
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.244.0.3:9153" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-ZP3FB6NMPNCO4VBJ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.244.0.9:9153" -j KUBE-SEP-CEWR77HQLZDHWWAJ
-A KUBE-SVC-KUJ6ECKL6H5JAXUK -m comment --comment "observability/kube-prometheus-stack-kube-state-metrics:http -> 10.244.0.40:8080" -j KUBE-SEP-UIBATC5QF7SPCCN4
-A KUBE-SVC-MZHGT6CDAGMW2KTF -m comment --comment "observability/kube-prometheus-stack-operator:https -> 10.244.0.25:10250" -j KUBE-SEP-ILGU4HGY5OWPMYYA
-A KUBE-SVC-NGSMBSSFRDULITT4 -m comment --comment "longhorn-system/longhorn-conversion-webhook:conversion-webhook -> 10.244.0.19:9501" -j KUBE-SEP-5H4PQHEH3QCKBT3T
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 91.98.16.184:6443" -j KUBE-SEP-ULJJKFSC4YGIFRKX
-A KUBE-SVC-NQL64TY2T3FWFXFQ -m comment --comment "longhorn-system/longhorn-backend:manager -> 10.244.0.19:9500" -j KUBE-SEP-OWBRLJ2Z6GNPLUHB
-A KUBE-SVC-OKOAGQILQ2QU2JM4 -m comment --comment "observability/kube-prometheus-stack-prometheus:http-web -> 10.244.0.42:9090" -j KUBE-SEP-IRI4XBY25QLSTQE3
-A KUBE-SVC-OMSERJGOAAISQMFW -m comment --comment "observability/kube-prometheus-stack-grafana:http-web -> 10.244.0.36:3000" -j KUBE-SEP-PXV7UU7LGNRO3KLK
-A KUBE-SVC-PA4WR4WRQDCN7SSQ -m comment --comment "observability/kube-prometheus-stack-alertmanager:http-web -> 10.244.0.24:9093" -j KUBE-SEP-YBXI46UGV3J5W2DY
-A KUBE-SVC-S4EMHPZ44GDBMEWI -m comment --comment "longhorn-system/longhorn-admission-webhook:admission-webhook -> 10.244.0.19:9502" -j KUBE-SEP-ZGGEVCOHL3SZXMKT
-A KUBE-SVC-SLR7RBONOEYPJ4X2 -m comment --comment "observability/kube-prometheus-stack-prometheus:reloader-web -> 10.244.0.42:8080" -j KUBE-SEP-GZ5HGRHPX6LAWJ6Y
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.244.0.3:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-6E7XQMQ4RAYOWTTM
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.244.0.9:53" -j KUBE-SEP-LBMQNJ35ID4UIQ2A
-A KUBE-SVC-TD5WHLPT5YWZCX2A -m comment --comment "logging/loki:http-metrics -> 10.244.0.14:3100" -j KUBE-SEP-7JX74ZP2Z2GZVOVD
-A KUBE-SVC-TYVUZ72JN6SHFAXC -m comment --comment "longhorn-system/longhorn-recovery-backend:recovery-backend -> 10.244.0.19:9503" -j KUBE-SEP-OMNK6WQ2GLQGT7M4
-A KUBE-SVC-U7SXUNEARU4YPLE2 -m comment --comment "flux-system/source-controller:http -> 10.244.0.164:9090" -j KUBE-SEP-QDS2U5WUVX3O3ORN
-A KUBE-SVC-VCJD5DMHTZGOKGNJ -m comment --comment "flux-system/webhook-receiver:http -> 10.244.0.4:9292" -j KUBE-SEP-JHPASAIUXAQFI6BH
-A KUBE-SVC-Y464ZVWMEHSZBAXB -m comment --comment "observability/kube-prometheus-stack-alertmanager:reloader-web -> 10.244.0.24:8080" -j KUBE-SEP-RG3WJDDR5PK3WI3W
-A KUBE-SVC-ZUD4L6KQKCHD52W4 -m comment --comment "cert-manager/cert-manager-webhook:https -> 10.244.0.47:10250" -j KUBE-SEP-QNXYQK6BWTI4KQRL
COMMIT
# Completed on Sat Sep  6 20:29:16 2025
